# fakenos

./: .Dockerignore  .flake8  .gitignore  .pre-commit-config.yaml  404.html  CNAME  CODE_OF_CONDUCT.md  Dockerfile  LICENSE  README.md  docker-compose.yaml  fake_nos.yaml  index.html  inventory.yaml  mkdocs.yaml  mkdocs.yml  objects.inv  platforms.md  pylintrc  pyproject.toml  sitemap.xml  tasks.py  update_platforms.py  zensical.toml
.devcontainer/: devcontainer.json
.github/: CODEOWNERS
.github/workflows/: docs.yml  main.yml
api/builtin_plugins_api_reference/: index.html
api/core_api_reference/: index.html
ca/: index.html
ca/api/builtin_plugins_api_reference/: index.html
ca/api/core_api_reference/: index.html
ca/collaborators/: index.html
ca/development/: index.html
ca/development/conventions/: index.html
ca/development/creating_new_platforms/: index.html
ca/development/creating_nos_plugin/: index.html
ca/development/documentation/: index.html
ca/development/extras/: index.html
ca/development/github_actions/: index.html
ca/development/tasks/: index.html
ca/examples/: index.html
ca/examples/automatic_testing/: index.html
ca/examples/developing_scripts/: index.html
ca/overview/how/: index.html
ca/overview/references/: index.html
ca/overview/what/: index.html
ca/overview/what_not/: index.html
ca/overview/why/: index.html
ca/usage/configurations/: index.html
ca/usage/fakenos_inventory/: index.html
ca/usage/getting_started/: index.html
ca/usage/installation/: index.html
ca/usage/running_in_docker/: index.html
collaborators/: index.html
development/: index.html
development/conventions/: index.html
development/creating_new_platforms/: index.html
development/creating_nos_plugin/: index.html
development/documentation/: index.html
development/extras/: index.html
development/github_actions/: index.html
development/tasks/: index.html
docker/: Dockerfile  docker-compose.yaml  fakenos_inventory.yaml  inventory.yaml
docs/: README.md  builtin_plugins_api_reference.md  collaborators.ca.md  collaborators.en.md  collaborators.es.md  collaborators.md  core_api_reference.md  creating_nos_plugin.md  development.ca.md  development.en.md  development.es.md  development.md  examples.ca.md  examples.es.md  examples.md  fakenos_inventory.md  getting_started.md  index.ca.md  index.en.md  index.es.md  index.md  installation.md  overview.md  platforms.ca.md  platforms.es.md  platforms.md  running_in_docker_md.md
docs/api/: builtin_plugins_api_reference.md
docs/development/: conventions.ca.md  conventions.es.md  conventions.md  creating_new_platforms.ca.md  creating_new_platforms.en.md  creating_new_platforms.es.md  creating_nos_plugin.ca.md  creating_nos_plugin.en.md  creating_nos_plugin.es.md  documentation.ca.md  documentation.es.md  documentation.md  extras.ca.md  extras.en.md  extras.es.md  github_actions.ca.md  github_actions.es.md  github_actions.md  tasks.ca.md  tasks.es.md  tasks.md
docs/examples/: automatic_testing.ca.md  automatic_testing.en.md  automatic_testing.es.md  automatic_testing.md  developing_scripts.ca.md  developing_scripts.en.md  developing_scripts.es.md  developing_scripts.md  index.md
docs/overview/: how.ca.md  how.en.md  how.es.md  how.md  references.ca.md  references.en.md  references.es.md  what.ca.md  what.es.md  what.md  what_not.ca.md  what_not.es.md  what_not.md  why.ca.md  why.es.md  why.md
docs/usage/: configurations.ca.md  configurations.en.md  configurations.es.md  fakenos_inventory.ca.md  fakenos_inventory.es.md  fakenos_inventory.md  getting_started.ca.md  getting_started.es.md  getting_started.md  installation.ca.md  installation.en.md  installation.es.md  running_in_docker.ca.md  running_in_docker.en.md  running_in_docker.es.md  running_in_docker.md
es/: index.html
es/api/builtin_plugins_api_reference/: index.html
es/api/core_api_reference/: index.html
es/collaborators/: index.html
es/development/: index.html
es/development/conventions/: index.html
es/development/creating_new_platforms/: index.html
es/development/creating_nos_plugin/: index.html
es/development/documentation/: index.html
es/development/extras/: index.html
es/development/github_actions/: index.html
es/development/tasks/: index.html
es/examples/: index.html
es/examples/automatic_testing/: index.html
es/examples/developing_scripts/: index.html
es/overview/how/: index.html
es/overview/references/: index.html
es/overview/what/: index.html
es/overview/what_not/: index.html
es/overview/why/: index.html
es/usage/configurations/: index.html
examples/: index.html
examples/automatic_testing/: index.html
examples/developing_scripts/: index.html
fakenos/: __init__.py
fakenos/core/: fakenos.py  host.py  nos.py  pydantic_models.py  servers.py
overview/how/: index.html
overview/references/: index.html
overview/what/: index.html
overview/what_not/: index.html
overview/why/: index.html
search/: search_index.json
tests/: TODO_test_fakenos_container.py  test_base.py  test_fakenos_container.py  test_inventory.py  test_nornir_connections.py  test_nos_builders.py  utils.py
tests/assets/: inventory.yaml  inventory_configuration.yaml  module.py  nornir_config.yaml  nornir_group.yaml  nornir_hosts.yaml  ssh_host_rsa_key  ssh_host_rsa_key_with_password  ssh_host_rsa_key_with_password.pub  test_fakenos_register_nos_plugin_from_yaml_file.py  test_module.yaml.j2  yaml_nos.yaml  yaml_nos_1.py  yaml_nos_1.yaml
tests/core/: test_docker.py  test_fakenos.py  test_host.py  test_inventory.py  test_netmiko.py  test_nos.py  test_servers.py
tests/integration_tests/: test_inventory.py  test_nornir_connections.py  test_nos_builders.py
tests/plugins/: test_cmd_shell.py  test_platforms.py  test_shell_utils.py  test_ssh_server_paramiko.py
tests/ssh-keys/: ssh_host_rsa_key  ssh_host_rsa_key.pub
usage/configurations/: index.html
usage/fakenos_inventory/: index.html
usage/getting_started/: index.html
usage/installation/: index.html
usage/running_in_docker/: index.html
(+95 files in other folders)
